--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # Compiled class file
+.project
+.classpath
+.settings
+.idea
+.iml
 *.class
 
 # Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
@@ -18,6 +17,7 @@
 *.zip
 *.tar.gz
 *.rar
+target
+dist
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
