Doc: add module description
Signed-off-by: ss <sosozhuang@163.com>

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>rgw-client-core</artifactId>
     <name>RGW Client/Core Lib</name>
+    <description>The core module of RGW Client lib.</description>
 
     <dependencies>
         <dependency>
