--- a/core-sync/pom.xml
+++ b/core-sync/pom.xml
@@ -10,6 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rgw-client-core-sync</artifactId>
+    <packaging>pom</packaging>
+    <name>RGW Client/Core Sync Lib</name>
+    <description>The sync core module of RGW Client lib.</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.ceph</groupId>
+            <artifactId>rgw-client-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
