--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>core</module>
         <module>core-async</module>
         <module>core-sync</module>
+        <module>spring-boot-starter</module>
+        <module>spring-boot-autoconfigure</module>
+        <module>spring-boot-test</module>
     </modules>
 
     <name>RGW Client</name>
