--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.boot.version>1.5.12.RELEASE</spring.boot.version>
+        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <aws.s3v1.version>1.11.125</aws.s3v1.version>
         <aws.s3v2.version>2.13.7</aws.s3v2.version>
         <netty.version>4.1.46.Final</netty.version>
         <jackson.version>2.8.10</jackson.version>
-        <ribbon.version>1.3.2.RELEASE</ribbon.version>
+        <ribbon.version>2.2.2.RELEASE</ribbon.version>
         <hystrix.version>1.4.3</hystrix.version>
-        <archaius.version>0.7.3</archaius.version>
+        <archaius.version>0.7.6</archaius.version>
         <rxjava.version>1.3.8</rxjava.version>
         <brave.version>4.19.1</brave.version>
         <commons.lang.version>3.9</commons.lang.version>
@@ -84,9 +84,8 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-ribbon</artifactId>
+                <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
                 <version>${ribbon.version}</version>
-                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>com.netflix.hystrix</groupId>
@@ -156,10 +155,28 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>net.jodah</groupId>
+                <artifactId>typetools</artifactId>
+                <version>${typetools.version}</version>
+            </dependency>
+
+            <!-- test dependencies -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring.boot.version}</version>
+                <scope>test</scope>
                 <exclusions>
+                    <exclusion>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-api</artifactId>
+                    </exclusion>
                     <exclusion>
                         <groupId>org.junit.vintage</groupId>
                         <artifactId>junit-vintage-engine</artifactId>
@@ -170,21 +187,19 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-slf4j-impl</artifactId>
                 <version>${log4j.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
                 <version>${log4j.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>net.jodah</groupId>
-                <artifactId>typetools</artifactId>
-                <version>${typetools.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
