--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,10 @@
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>logback-classic</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-api</artifactId>
                     </exclusion>
