fix value of threadPools[action].maxSize

--- a/core/src/test/resources/full.properties
+++ b/core/src/test/resources/full.properties
@@ -21,7 +21,7 @@ rgwclient.connector.storages[0].secretKey=
 rgwclient.connector.storages[0].protocol=http
 rgwclient.connector.subscribes[0].endpoint=
 rgwclient.threadPools[action].coreSize=number of processors
-rgwclient.threadPools[action].maxSize=number of processors
+rgwclient.threadPools[action].maxSize=number of processors * 4
 rgwclient.threadPools[action].keepAlive=60000
 rgwclient.threadPools[action].queueSize=0
 rgwclient.threadPools[listener].coreSize=number of processors
