--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
     <modules>
         <module>core</module>
         <module>core-async</module>
+        <module>core-async-test</module>
         <module>core-sync</module>
+        <module>core-sync-test</module>
         <module>spring-boot-starter</module>
         <module>spring-boot-autoconfigure</module>
         <module>spring-boot-test</module>
@@ -49,7 +51,7 @@
         <commons.lang.version>3.9</commons.lang.version>
         <junit.version>4.12</junit.version>
         <log4j.version>2.8.2</log4j.version>
-        <typetools.version>0.6.2</typetools.version>
+        <jmh.version>1.25.2</jmh.version>
     </properties>
 
     <dependencyManagement>
@@ -153,11 +155,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>net.jodah</groupId>
-                <artifactId>typetools</artifactId>
-                <version>${typetools.version}</version>
-            </dependency>
 
             <!-- test dependencies -->
             <dependency>
@@ -203,6 +200,16 @@
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-core</artifactId>
+                <version>${jmh.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-generator-annprocess</artifactId>
+                <version>${jmh.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
