--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,7 +64,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-        mvn -DskipTests=true install
+        mvn -DskipTests=true compile
     #   make release
 
     - name: Perform CodeQL Analysis
